Bug 152849 - Modern IDB: imported/w3c/indexeddb/idbcursor-continue.htm fails
Summary: Modern IDB: imported/w3c/indexeddb/idbcursor-continue.htm fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 152554
  Show dependency treegraph
 
Reported: 2016-01-07 13:27 PST by Brady Eidson
Modified: 2016-01-07 14:17 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (2.71 KB, patch)
2016-01-07 13:28 PST, Brady Eidson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-01-07 13:27:09 PST
Modern IDB: imported/w3c/indexeddb/idbcursor-continue.htm fails

There was a code path for memory index cursors to iterate outside of their assigned range.
Comment 1 Brady Eidson 2016-01-07 13:28:49 PST
Created attachment 268479 [details]
Patch v1
Comment 2 WebKit Commit Bot 2016-01-07 14:17:32 PST
Comment on attachment 268479 [details]
Patch v1

Clearing flags on attachment: 268479

Committed r194726: <http://trac.webkit.org/changeset/194726>
Comment 3 WebKit Commit Bot 2016-01-07 14:17:35 PST
All reviewed patches have been landed.  Closing bug.