Modern IDB: imported/w3c/indexeddb/idbcursor-continue.htm fails. https://bugs.webkit.org/show_bug.cgi?id=152849

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/server/MemoryIndexCursor.cpp:
(WebCore::IDBServer::MemoryIndexCursor::iterate): Don't allow returning an iterator outside of
  the cursor's assigned range.

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/170944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194726 268f45cc-cd09-0410-ab3c-d52691b4dbfc